cleaned up issues with game-ending logic; added game over popup window and button, tweaked some styles and layout issues. Ran out of time to fully troubleshoot and fix mobile responsive layout problems.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,6 +33,23 @@ width: 100%;
 	float: left;
 	margin: 0 0 0 10px;
 }
+#gameOver {
+	position: fixed;
+	z-index: 2;
+	left: 20%;
+	top: 20%;
+	width: 60%;
+	height: 30%;
+	padding: 30px;
+	text-align: center;
+	font-size: 3em;
+	font-weight: bold;
+	background-color: #fff;
+	box-shadow: 0 0 50px -5px #000;
+}
+button {
+	display: block;
+}
 @media only screen and (min-width: 400px) {
     #gameStage {
         padding: 30px;
